--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: morph_button
-description: "A shape animated button"
-version: 0.0.1
+description: "Animate buttons! Flutter package for dynamic shapes & smooth animations."
+version: 0.0.2
 homepage: https://github.com/anoochit/morph_button
 
 environment:
