--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: morph_button
 description: "Animate buttons! Flutter package for dynamic shapes & smooth animations."
-version: 0.0.2
+version: 0.0.3
 homepage: https://github.com/anoochit/morph_button
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: ">=3.3.3 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
